syntax = "proto3";

package schedule;
option go_package="./pb";

message CreateReq{
  string UserId = 1;
}
message CreateResp{
  bool Flag = 1;
}

message CheckReq{
  string UserId = 1;
  string ScheduleID = 2;
}

message CheckResp{
  string Name            =1;
  string School          =2;
  string Major           =3;
  string Group           =4;
  string EntryFormStatus =5;
  string AdmissionStatus =6;
}

service ScheduleClient {
  rpc Check(CheckReq) returns(CheckResp);
  rpc Create(CreateReq) returns(CreateResp);
}
